c4prj2_input/grade.txt
Grading at Mon Nov 26 05:58:29 UTC 2018
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘getHand’:
input.c:15:9: error: ‘TRUE’ undeclared (first use in this function)
   while(TRUE) {
         ^
input.c:15:9: note: each undeclared identifier is reported only once for each function it appears in
input.c:18:18: error: ‘n’ undeclared (first use in this function)
       char str_n[n];
                  ^
input.c:18:12: error: unused variable ‘str_n’ [-Werror=unused-variable]
       char str_n[n];
            ^
input.c:32:32: error: passing argument 2 of ‘strcmp’ makes pointer from integer without a cast [-Werror=int-conversion]
     else if (strcmp((str + i), '\n') == 0)
                                ^
In file included from input.c:3:0:
/usr/include/string.h:140:12: note: expected ‘const char *’ but argument is of type ‘int’
 extern int strcmp (const char *__s1, const char *__s2)
            ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
